# TheIndestructibleLibrary

./: CMakeLists.txt  DBController.cpp  DBController.h  GenericLinkedList.h  GenericNode.h  MetaDB.cpp  MetaDB.h  README.md  main.cpp
ClientGUI/ClientGUI/ClientApplication/: ClientApplication.pro  actionswindow.cpp  actionswindow.h  actionswindow.ui  bitconverter.cpp  bitconverter.h  connector.cpp  connector.h  genericlinkedlist.cpp  genericlinkedlist.h  genericnode.cpp  genericnode.h  imagepackage.cpp  imagepackage.h  imgtable.cpp  imgtable.h  keyvalue.cpp  keyvalue.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  metadb.cpp  metadb.h  netpackage.cpp  netpackage.h  registrationscreen.cpp  registrationscreen.h  registrationscreen.ui  selectionwindow.cpp  selectionwindow.h  selectionwindow.ui  sqlmanagementwindow.cpp  sqlmanagementwindow.h  sqlmanagementwindow.ui
Converters/: BitConverter.cpp  BitConverter.h
Database/: KeyValue.cpp  KeyValue.h  MetaController.cpp  MetaController.h
Database/metadata/: current.json  previous.json
MetaDBServer/: CMakeLists.txt
MetaDBServer/Database/: KeyValue.cpp  KeyValue.h  MetaController.cpp  MetaController.h
MetaDBServer/Networking/: NetPackage.cpp  NetPackage.h  Server.cpp  Server.h
Networking/: Connector.cpp  Connector.h  ImagePackage.cpp  ImagePackage.h  Netpackage.cpp  Netpackage.h  Server.cpp  Server.h
RAID/: FileManager.cpp  FileManager.h  RAIDManager.cpp  RAIDManager.h
RAID Manager/: FileManager.cpp  RAID show case.txt  RAIDManager.cpp  RAIDManager.h
RAID Manager/RAID5/: IDs.txt
RAIDServer/: CMakeLists.txt  main.cpp
RAIDServer/Networking/: NetPackage.h  Server.cpp  Server.h
RAIDServer/RAIDManager/: FileManager.cpp  FileManager.h  RAIDManager.cpp  RAIDManager.h
RAIDServer/Structure/: GenericLinkedList.h  GenericNode.h
Structure/: GenericLinkedList.h  GenericNode.h
